--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <header>
+    <div id="image">
+      <p>Some text</p>
+    </div>
     <nav>
-      <div id="image">
-        <p>Some text</p>
-      </div>
-      <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT </a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">GALERY</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
+      <a href="#">HOME</a><a href="#">ABOUT</a><a href="#">BLOG</a
+      ><a href="#">GALERY</a><a href="#">CONTACT</a>
     </nav>
   </header>
   <body>
@@ -41,7 +36,7 @@
         <h2>Our Free Products</h2>
         <ul>
           <li>
-            <img src="" />
+            <img src="challenges.jpg" />
             <h3>Just Try to Find me</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
@@ -51,7 +46,7 @@
             </p>
           </li>
           <li>
-            <img src="" />
+            <img src="challenges.jpg" />
             <h3>Meeting place</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dicta
@@ -61,7 +56,7 @@
             </p>
           </li>
           <li>
-            <img src="" />
+            <img src="challenges.jpg" />
             <h3>Skate show</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
